--- a/login.css
+++ b/login.css
@@ -29,7 +29,7 @@
 body {
     font-family: var(--fonte);
     background: #2A7B9B;
-background: linear-gradient(90deg, rgba(42, 123, 155, 1) 0%, rgb(87, 199, 199) 80%, rgb(249, 248, 244) 100%);
+    background: linear-gradient(90deg, #2A8C7A 0%, #33A685 80%, #F2EBDC 100%);
     display: flex;
     justify-content: center;
     align-items: center;
